--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,3 +72,11 @@ h1{
 .card {
   padding: 2em;
 }
+
+.fadein{
+  animation: fadeIn 1s ease-in-out;
+}
+
+.fadein-up{
+  animation: fadeInUp 1s ease-in-out;
+}
