--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,18 +16,11 @@
 .logo.spotify{
   height: 10em;
 }
+
 /*.logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
 */
-
-.entrance{
-  animation: fadeInUp 1s ease-in-out;
-}
-
-.entrance-logo{
-  animation: slideInDown 1s ease-in-out;
-}
 
 h1{
   line-height: 0.5;
@@ -50,33 +43,18 @@ h1{
   /*transform: scale(1.05);*/
 }
 
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(1) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
   padding: 2em;
 }
 
-.fadein{
+.fadeIn{
   animation: fadeIn 1s ease-in-out;
 }
 
-.fadein-up{
+.fadeUp{
   animation: fadeInUp 1s ease-in-out;
+}
+
+.fadeDown{
+  animation: slideInDown 1s ease-in-out;
 }
