--- a/client/src/media-player.css
+++ b/client/src/media-player.css
@@ -1,9 +1,10 @@
 .media-player {
+  position: fixed;
   background-color: #282c34;
   color: white;
   padding: 20px;
   border-radius: 5px;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .media-player h2 {
@@ -17,6 +18,7 @@
 }
 
 .media-player .progress {
+  min-width: clamp(100px, 14.5vw, 300px); /* min, preferred, max */
   flex-grow: 1;
   height: 5px;
   background: #444;
@@ -34,4 +36,8 @@
   text-align: center;
   font-size: 18px;
   display: inline-block;
+}
+
+.fadein{
+    animation: fadeInUp 1s ease-in-out;
 }
