--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 10000000px;
+  /*Testing Purposes: Sticky Music Player*/
+  height: 10000px;
 }
 
 a {
