--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,6 +36,7 @@ h1{
   font-family: 'Poiret One', sans-serif;
   font-size: 1.5em;
   margin-top: 0.5em;
+  margin-bottom: 2.5rem;
 }
 
 .logo.spotify:hover {
